Finished logic, minor changes left

--- a/Assignment_2/CMakeLists.txt
+++ b/Assignment_2/CMakeLists.txt
@@ -8,6 +8,7 @@ add_executable(Assignment_2
 
         enums/Lab.h
         enums/AccessLevel.h
+
         users/User.h
         users/Student.h
         users/Professor.h
@@ -15,12 +16,29 @@ add_executable(Assignment_2
         users/Director.h
         users/Admin.h
 
+        rooms/Room.h
+        rooms/ClassRoom.h
+        rooms/LectureRoom.h
+        rooms/ConferenceRoom.h
+        rooms/Cabinet.h
+        rooms/DirectorCabinet.h
+
+        #=====================
+
         enums/Lab.cpp
         enums/AccessLevel.cpp
+
         users/User.cpp
         users/Student.cpp
         users/Professor.cpp
         users/LabEmployee.cpp
         users/Director.cpp
         users/Admin.cpp
+
+        rooms/Room.cpp
+        rooms/ClassRoom.cpp
+        rooms/LectureRoom.cpp
+        rooms/ConferenceRoom.cpp
+        rooms/Cabinet.cpp
+        rooms/DirectorCabinet.cpp
         )
