Finish emergency situation

--- a/Assignment_2/CMakeLists.txt
+++ b/Assignment_2/CMakeLists.txt
@@ -5,7 +5,13 @@ set(CMAKE_CXX_STANDARD 17)
 
 add_executable(Assignment_2
 
+        io/io.h
         io/Console.h
+        io/Requests.h
+
+        emergency/emergencies.h
+        emergency/Emergency.h
+        emergency/EmergencyTest.h
 
         enums/enums.h
         enums/Lab.h
@@ -35,6 +41,10 @@ add_executable(Assignment_2
         main.cpp
 
         io/Console.cpp
+        io/Requests.cpp
+
+        emergency/Emergency.cpp
+        emergency/EmergencyTest.cpp
 
         enums/Lab.cpp
         enums/AccessLevel.cpp
