--- a/Assignment_4/CMakeLists.txt
+++ b/Assignment_4/CMakeLists.txt
@@ -36,4 +36,6 @@ add_executable(
         logic/PassengerGateway.cpp logic/PassengerGateway.h
         logic/DriverGateway.cpp logic/DriverGateway.h
         logic/System.cpp logic/System.h
-        logic/DBHelper.cpp logic/DBHelper.h test/Test.cpp test/Test.h)
+        logic/DBHelper.cpp logic/DBHelper.h
+
+        test/Test.cpp test/Test.h)
